fixed various glitches left from the big moves

--- a/damagecontrol/app/views/project/changesets.rhtml
+++ b/damagecontrol/app/views/project/changesets.rhtml
@@ -28,25 +28,8 @@
         <td width="90%">
           <a class="diff-toggle" href="#" onclick="toggleCode('<%= change.path %>');return false"><%= change.path %></a>
           <br>
-          <%
-            html_diff = ""
-            dp = RSCM::DiffParser.new
-            diff_file = RSCM::Directories.diff_file(@project.name, changeset, change)
-            if(File.exist?(diff_file))
-              File.open(diff_file) do |diffs_io|
-                diffs = dp.parse_diffs(diffs_io)
-                dh = RSCM::DiffHtmlizer.new(html_diff)
-                diffs.accept(dh)
-                if(html_diff == "")
-                  html_diff = "Diff was calculated, but was empty. (This may be a bug - new files are not handled yet)."
-                end
-              end
-            else
-              html_diff = "Diffs not calculated yet."
-            end
-          %>
           <div class="diff" id="<%= change.path %>">
-          <%= html_diff %>
+          <%= change.html_diff %>
           </div>
         </td>
       </tr>
