--- a/damagecontrol/app/views/project/_project.rhtml
+++ b/damagecontrol/app/views/project/_project.rhtml
@@ -11,20 +11,20 @@ var project_home_page_tip = "<div class='tp1'>URL to the project's home page or 
   <td width="25%" class="setting-name">Project name</td>
   <td><%= tip(:txt => 'project_name_page_tip') %></td>
   <td width="75%">
-    <%= text_or_input(@new_project, :name => "RSCM::Project[name]", :value => project.name) %>
+    <%= text_or_input(@new_project, :name => "DamageControl::Project[name]", :value => project.name) %>
     <% if(@edit) %>
-      <%= tag("input", :type => "hidden", :name => "RSCM::Project[name]", :value => project.name) %>
+      <%= tag("input", :type => "hidden", :name => "DamageControl::Project[name]", :value => project.name) %>
     <% end %>
   </td>
 </tr>
 <tr>
   <td>Project description</td>
   <td><%= tip(:txt => 'project_description_tip') %></td>
-  <td><%= text_or_input(@edit, :name => "RSCM::Project[description]", :value => project.description) %></td>
+  <td><%= text_or_input(@edit, :name => "DamageControl::Project[description]", :value => project.description) %></td>
 </tr>
 <tr>
   <td>Project home page</td>
   <td><%= tip(:txt => 'project_home_page_tip') %></td>
-  <td><%= text_or_input(@edit, :name => "RSCM::Project[home_page]", :value => project.home_page) %></td>
+  <td><%= text_or_input(@edit, :name => "DamageControl::Project[home_page]", :value => project.home_page) %></td>
 </tr>
 </table>
