--- a/trunk/damagecontrol/app/views/project/_bugzilla.rhtml
+++ b/trunk/damagecontrol/app/views/project/_bugzilla.rhtml
@@ -6,7 +6,7 @@ var bugzilla_url_tip = "<div class='tp1'>The URL of the Bugzilla installation.</
   <tr>
     <td width="25%" class="setting-name">Bugzilla URL</td>
     <td><%= tip(:txt => 'bugzilla_url_tip') %></td>
-    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::Tracker::Bugzilla[url]", :value => bugzilla.url) %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "DamageControl::Tracker::Bugzilla[url]", :value => bugzilla.url) %></td>
   </tr>
 </table>
 
