--- a/trunk/damagecontrol/app/views/project/_rubyforge.rhtml
+++ b/trunk/damagecontrol/app/views/project/_rubyforge.rhtml
@@ -7,12 +7,12 @@ var rubyforge_tracker_id_tip = "<div class='tp1'>The ID of the tracker (aid). Ex
   <tr>
     <td width="25%" class="setting-name">Project ID</td>
     <td><%= tip(:txt => 'rubyforge_group_id_tip') %></td>
-    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::Tracker::RubyForge[group_id]", :value => rubyforge.group_id) %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "DamageControl::Tracker::RubyForge[group_id]", :value => rubyforge.group_id) %></td>
   </tr>
   <tr>
     <td class="setting-name">Tracker ID</td>
     <td><%= tip(:txt => 'rubyforge_tracker_id_tip') %></td>
-    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::Tracker::RubyForge[tracker_id]", :value => rubyforge.tracker_id) %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "DamageControl::Tracker::RubyForge[tracker_id]", :value => rubyforge.tracker_id) %></td>
   </tr>
 </table>
 
