--- a/trunk/damagecontrol/app/views/project/_scarab.rhtml
+++ b/trunk/damagecontrol/app/views/project/_scarab.rhtml
@@ -7,12 +7,12 @@ var scarab_module_key_tip = "<div class='tp1'>The Scarab module key.</div>";
   <tr>
     <td width="25%" class="setting-name">Scarab Base URL</td>
     <td><%= tip(:txt => 'scarab_baseurl_tip') %></td>
-    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::Tracker::Scarab[baseurl]", :value => scarab.baseurl) %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "DamageControl::Tracker::Scarab[baseurl]", :value => scarab.baseurl) %></td>
   </tr>
   <tr>
     <td class="setting-name">Scarab Module</td>
     <td><%= tip(:txt => 'scarab_module_key_tip') %></td>
-    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::Tracker::Scarab[module_key]", :value => scarab.module_key) %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "DamageControl::Tracker::Scarab[module_key]", :value => scarab.module_key) %></td>
   </tr>
 </table>
 
