--- a/trunk/damagecontrol/app/views/project/_sourceforge.rhtml
+++ b/trunk/damagecontrol/app/views/project/_sourceforge.rhtml
@@ -7,12 +7,12 @@ var sourceforge_tracker_id_tip = "<div class='tp1'>The ID of the tracker (aid). 
   <tr>
     <td width="25%" class="setting-name">Project ID</td>
     <td><%= tip(:txt => 'sourceforge_group_id_tip') %></td>
-    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::Tracker::SourceForge[group_id]", :value => sourceforge.group_id) %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "DamageControl::Tracker::SourceForge[group_id]", :value => sourceforge.group_id) %></td>
   </tr>
   <tr>
     <td class="setting-name">Tracker ID</td>
     <td><%= tip(:txt => 'sourceforge_tracker_id_tip') %></td>
-    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::Tracker::SourceForge[tracker_id]", :value => sourceforge.tracker_id) %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "DamageControl::Tracker::SourceForge[tracker_id]", :value => sourceforge.tracker_id) %></td>
   </tr>
 </table>
 
