--- a/trunk/damagecontrol/app/views/project/_trac.rhtml
+++ b/trunk/damagecontrol/app/views/project/_trac.rhtml
@@ -6,7 +6,7 @@ var trac_url_tip = "<div class='tp1'>The URL of the Trac installation. This URL 
   <tr>
     <td width="25%" class="setting-name">Trac URL</td>
     <td><%= tip(:txt => 'trac_url_tip') %></td>
-    <td width="75%"><%= text_or_input(@edit, :name => "RSCM::Tracker::Trac[url]", :value => trac.url) %></td>
+    <td width="75%"><%= text_or_input(@edit, :name => "DamageControl::Tracker::Trac[url]", :value => trac.url) %></td>
   </tr>
 </table>
 
