--- a/trunk/damagecontrol/app/views/project/index.rhtml
+++ b/trunk/damagecontrol/app/views/project/index.rhtml
@@ -1,11 +1,22 @@
 <table id="projectstatus" class="pane">
   <tr>
     <th align="left">Project</th>
+    <th align="left">Latest Build</th>
     <th align="left">Changeset RSS</th>
   </tr>
 <% @projects.each do |project| %>
   <tr>
     <td align="left"><%= link_to(project.name, {:controller => "project", :action => "view", :id => project.name}) %></td>
+    <td align="left">
+      <% 
+        img = "/images/grey-16.gif"
+        build = project.latest_build
+        if(build)
+          img = build.small_image
+        end
+      %>
+      <%= tag("img", :src => img) %>
+    </td>
     <td align="left"><%= link_to_image("rss.gif", :action => "changesets_rss", :id => project.name) %></td>
   </tr>
 <% end %>
