--- a/damagecontrol/app/views/layouts/rscm.rhtml
+++ b/damagecontrol/app/views/layouts/rscm.rhtml
@@ -2,6 +2,7 @@
   <head>
     <title>RSCM</title>
     <script src="/javascripts/toggle_diff.js" type="text/javascript"></script>
+    <script src="/javascripts/toggle_div.js" type="text/javascript"></script>
     <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
     <link type="text/css" rel="stylesheet" href="/stylesheets/diff.css">
     <script>
