added support for generic publishers and action-mailer based email publisher. some dc tests are failing, but it's a rake/require issue.

--- a/damagecontrol/app/views/project/_changesets_list.rhtml
+++ b/damagecontrol/app/views/project/_changesets_list.rhtml
@@ -30,7 +30,7 @@
   <% if(!@select_changeset_identifiers.empty?) %>
     <tr class="build-row">
       <td class="build-cell-even">
-        <form method="get" action="<%= url_for(:action => "changesets", :id => @project.name) %>">
+        <form method="get" action="<%= url_for(:action => "changeset", :id => @project.name) %>">
           <input type="hidden" name="project_name" value="<%= "bar" %>" />
           <select name="changeset" onchange="submit()">
           
