--- a/damagecontrol/app/views/project/view.rhtml
+++ b/damagecontrol/app/views/project/view.rhtml
@@ -16,7 +16,7 @@ tabs = ["projects", "scms", "publishers", "trackers"]
 <ul id="foldertab">
   <li><a href="javascript:setTab('projects')"><img src="/images/16x16/wrench.png"> General</a></li>
   <li><a href="javascript:setTab('scms')"><img src="/images/16x16/safe.png"> Source Control</a></li>
-  <li><a href="javascript:setTab('publishers')"><img src="/images/16x16/component.png"> Publishers</a></li>
+  <li><a href="javascript:setTab('publishers')"><img src="/images/megaphone.png"> Publishers</a></li>
   <li><a href="javascript:setTab('trackers')"><img src="/images/16x16/scroll_information.png"> Issue Tracker</a></li>
 </ul>
 
