add support for template based cloning of projects

--- a/damagecontrol/app/views/project/view.rhtml
+++ b/damagecontrol/app/views/project/view.rhtml
@@ -41,6 +41,7 @@ tabs = ["projects", "scms", "publishers", "trackers"]
 </div>
 
 <div id="publishers" style="display:none">
+Publishers give feedback of the results of a build. Publishers run after a build is executed. 
   <%= tab_pane("publishers", @project.publishers) %>
 </div>
 
