Added Project.start_time so that history doesn't start from epoch. Defaults to 2 weeks prior to when a project is created.

--- a/damagecontrol/app/views/layouts/rscm.rhtml
+++ b/damagecontrol/app/views/layouts/rscm.rhtml
@@ -1,8 +1,13 @@
 <html>
   <head>
-    <title>RSCM</title>
-    <script src="/javascripts/toggle_diff.js" type="text/javascript"></script>
-    <script src="/javascripts/toggle_div.js" type="text/javascript"></script>
+    <title>DamageControl</title>
+    <script type="text/javascript" src="/javascripts/toggle_diff.js"></script>
+    <script type="text/javascript" src="/javascripts/toggle_div.js"></script>
+    <script type="text/javascript" src="/javascripts/dateFormat.js"></script>
+    
+    <script type="text/javascript" src="/javascripts/jscalendar/calendar.js"></script>    <script type="text/javascript" src="/javascripts/jscalendar/lang/calendar-en.js"></script>    <script type="text/javascript" src="/javascripts/jscalendar/calendar-setup.js"></script>
+    <link type="text/css" rel="stylesheet" href="/javascripts/jscalendar/calendar-win2k-2.css">
+
     <link type="text/css" rel="stylesheet" href="/stylesheets/style.css">
     <link type="text/css" rel="stylesheet" href="/stylesheets/diff.css">
     <script>
