--- a/trunk/damagecontrol/app/views/project/view.rhtml
+++ b/trunk/damagecontrol/app/views/project/view.rhtml
@@ -21,7 +21,7 @@ tabs = ["projects", "scms", "publishers", "trackers"]
 </ul>
 
 <% if(@edit) %>
-<form action="/project/save">
+<form name="project_form" action="/project/save">
 <% end %>
 
 <div id="projects" style="display:block">
