--- a/trunk/damagecontrol/app/views/project/_project.rhtml
+++ b/trunk/damagecontrol/app/views/project/_project.rhtml
@@ -3,7 +3,7 @@ var project_name_page_tip = "<div class='tp1'>The project name should not use sp
 var build_command_tip = "<div class='tp1'>The command-line that will execute the build.</div>";
 var project_description_tip = "<div class='tp1'>A short description of the project. Will be used in various notifications such as RSS.</div>";
 var project_home_page_tip = "<div class='tp1'>URL to the project's home page or documentation.</div>";
-var project_start_date_tip = "<div class='tp1'>Date from which changesets will be retrieved.</div>";
+var project_start_time_tip = "<div class='tp1'>Date from which changesets will be retrieved.</div>";
 </script>
 
 <input name="project" type="hidden" value="<%= project.class.name %>"/>
@@ -36,6 +36,6 @@ var project_start_date_tip = "<div class='tp1'>Date from which changesets will b
 </tr>
 <tr>
   <td>Start date</td>
-  <td><%= tip(:txt => 'project_start_date_tip') %></td>
+  <td><%= tip(:txt => 'project_start_time_tip') %></td>
   <td><%= calendar(:name => "DamageControl::Project[@start_time]", :time => project.start_time ? project.start_time : Time.new.utc) %></td>
 </table>
