--- a/trunk/damagecontrol/app/views/project/_tab_pane.rhtml
+++ b/trunk/damagecontrol/app/views/project/_tab_pane.rhtml
@@ -11,7 +11,7 @@
    	<a alt="<%= o.name %>" href="javascript:showElement('<%= o.class.name %>', <%= tab_pane.name %>)">
    	  <img src="/images/publisher/<%= underscore(demodulize(o.class.name)) %>.png">
   	  </a>
-  	  <%= text_or_checkbox(:name => "#{tab_pane.name}[#{o.class.name}][@enabled]", :value => o.enabled, :editable => true) %>
+  	  <%= text_or_checkbox(:name => "#{tab_pane.name}[#{o.class.name}][@enabled]", :value => o.enabled, :editable => @edit) %>
   </li>
   <% end %>
 </ul>
