--- a/trunk/damagecontrol/app/views/layouts/default.rhtml
+++ b/trunk/damagecontrol/app/views/layouts/default.rhtml
@@ -24,12 +24,12 @@ function intercept(a) {
 <table id="header" cellpadding="0" cellspacing="0" width="100%" border="0">
   <tr id="top-panel">
     <td>
-      <a href="http://damagecontrol.codehaus.org/"><img class="logo" src="images/damagecontrol-logo.gif"/></a>
+      <a href="http://damagecontrol.codehaus.org/"><!--img class="logo" src="images/damagecontrol-logo.gif"/--></a>
     </td>
   </tr>
   <tr id="top-nav">
     <td id="left-top-nav">
-      <%= "TODO: breadcrumbs here" %>
+      <%= breadcrumbs %>
     </td>
   </tr>
 </table>
