--- a/damagecontrol/app/views/project/view.rhtml
+++ b/damagecontrol/app/views/project/view.rhtml
@@ -46,6 +46,11 @@ Publishers give feedback of the results of a build. Publishers run after a build
 </div>
 
 <div id="trackers" style="display:none">
+For every changeset, DamageControl looks for issue/bug numbers in the changeset messages. 
+If it finds an issue number, it creates a link to the external issue tracker.
+
+By specifying an issue tracker, you're giving DamageControl a hint about the format of the bugs to
+look for, as well as a base url of the bug tracker, so it can create a full link.
   <%= select_pane("Issue Trackers", "trackers", @trackers) %>
 </div>
 
