--- a/damagecontrol/app/views/project/_select_pane.rhtml
+++ b/damagecontrol/app/views/project/_select_pane.rhtml
@@ -1,8 +1,10 @@
-<script>
+<script type="text/javascript">
+<!--
 <%= select_pane.name %>_array = [
 <% select_pane.each do |o| %>
   "<%= o.class.name %>",
 <% end %> "" ];
+-->
 </script>
 
 <table>
