--- a/damagecontrol/app/views/project/view.rhtml
+++ b/damagecontrol/app/views/project/view.rhtml
@@ -1,5 +1,5 @@
-<script><!--
-
+<script type="text/javascript">
+<!--
 function executeOnLoad() {
 <% @scms.each do |scm| %>
   <%= scm.short %>_init();
@@ -9,15 +9,14 @@ function executeOnLoad() {
 }
 
 tabs = ["projects", "scms", "publishers", "trackers"]
-
-// -->
+-->
 </script>
 
-<ul id="foldertab">
-  <li><a href="javascript:setTab('projects')"><img src="/images/16x16/wrench.png"> General</a></li>
-  <li><a href="javascript:setTab('scms')"><img src="/images/16x16/safe.png"> Source Control</a></li>
-  <li><a href="javascript:setTab('publishers')"><img src="/images/megaphone.png"> Publishers</a></li>
-  <li><a href="javascript:setTab('trackers')"><img src="/images/16x16/scroll_information.png"> Issue Tracker</a></li>
+<ul class="foldertab">
+  <li><a href="javascript:setTab('projects')"><img src="/images/16x16/wrench.png" alt=""/> General</a></li>
+  <li><a href="javascript:setTab('scms')"><img src="/images/16x16/safe.png" alt=""/> Source Control</a></li>
+  <li><a href="javascript:setTab('publishers')"><img src="/images/megaphone.png" alt=""/> Publishers</a></li>
+  <li><a href="javascript:setTab('trackers')"><img src="/images/16x16/scroll_information.png" alt=""/> Issue Tracker</a></li>
 </ul>
 
 <% if(@edit) %>
