--- a/damagecontrol/app/views/project/_project.rhtml
+++ b/damagecontrol/app/views/project/_project.rhtml
@@ -1,9 +1,11 @@
-<script>
+<script type="text/javascript">
+<!--
 var project_name_page_tip = "<div class='tp1'>The project name should not use space characters, as it will be used to create a folder on the server.</div>";
 var build_command_tip = "<div class='tp1'>The command-line that will execute the build.</div>";
 var project_description_tip = "<div class='tp1'>A short description of the project. Will be used in various notifications such as RSS.</div>";
 var project_home_page_tip = "<div class='tp1'>URL to the project's home page or documentation.</div>";
 var project_start_time_tip = "<div class='tp1'>Date from which changesets will be retrieved.</div>";
+-->
 </script>
 
 <input name="project" type="hidden" value="<%= project.class.name %>"/>
@@ -33,4 +35,5 @@ var project_start_time_tip = "<div class='tp1'>Date from which changesets will b
   <td>Start date</td>
   <td><%= tip(:txt => 'project_start_time_tip') %></td>
   <td><%= calendar(:name => "DamageControl::Project[@start_time]", :time => project.start_time ? project.start_time : Time.new.utc) %></td>
+</tr>
 </table>
