--- a/damagecontrol/app/views/scm/checkout_status.rhtml
+++ b/damagecontrol/app/views/scm/checkout_status.rhtml
@@ -25,7 +25,7 @@ function processReqChange() {
         // only if "OK"
         if (req.status == 200) {
             var checkout_list = window.frames['checkout_list']
-            checkout_list.document.body.innerHTML = req.responseText.replace(nl, "<br>")
+            checkout_list.document.body.innerHTML = req.responseText.replace(nl, "<br/>")
             checkout_list.scrollBy(0, 3000)
 
             setTimeout("loadXMLDoc('<%= @checkout_list_path %>')", 1000)
