--- a/damagecontrol/app/views/project/view.rhtml
+++ b/damagecontrol/app/views/project/view.rhtml
@@ -50,7 +50,7 @@ If it finds an issue number, it creates a link to the external issue tracker.
 
 By specifying an issue tracker, you're giving DamageControl a hint about the format of the bugs to
 look for, as well as a base url of the bug tracker, so it can create a full link.
-  <%= select_pane("Issue Trackers", "trackers", @trackers) %>
+  <%= select_pane("Issue Tracker", "trackers", @trackers) %>
 </div>
 
 <% if(@edit) %>
