--- a/damagecontrol/app/views/project/_project.rhtml
+++ b/damagecontrol/app/views/project/_project.rhtml
@@ -1,5 +1,6 @@
 <script type="text/javascript">
 <!--
+// TODO: get rid of these stupid tooltips and use some better lightweight ones.
 var project_name_page_tip = "<div class='tp1'>The project name should not use space characters, as it will be used to create a folder on the server.</div>";
 var build_command_tip = "<div class='tp1'>The command-line that will execute the build.</div>";
 var project_description_tip = "<div class='tp1'>A short description of the project. Will be used in various notifications such as RSS.</div>";
@@ -36,4 +37,33 @@ var project_start_time_tip = "<div class='tp1'>Date from which changesets will b
   <td><%= tip(:txt => 'project_start_time_tip') %></td>
   <td><%= calendar(:name => "DamageControl::Project[@start_time]", :time => project.start_time ? project.start_time : Time.new.utc) %></td>
 </tr>
+<tr>
+  <td>Dependencies</td>
+  <td>&nbsp;</td>
+  <td>
+  <% @projects.each do |project| 
+	  		depends_indirectly_on = @project.depends_indirectly_on?(project)
+	  		depends_directly_on = @project.depends_directly_on?(project)
+
+	  		other_depends_on = project.depends_on?(@project)
+	  		warning = ""
+	  		if(depends_indirectly_on && !depends_directly_on)
+	  			warning = " (we dependend on this indirectly)"
+	  		end
+	  		if(other_depends_on)
+	  			warning = " (dependends on us directly or indirectly)"
+	  		end
+
+  			if(@project != project)
+	  	%>
+  			<br>
+  				<%= check_box_tag("dependencies[]", project.name, depends_directly_on, {"disabled" => other_depends_on}) %> 
+  				<%= link_to(project.name, :action => "view", :id => project.name) %><%= warning %>
+  			</br>
+	  <% end %>
+  <% end %>
+  </td>
+</tr>
 </table>
+
+<img src="<%= url_for(:controller => "dependency", :action => "graph") %>"/>
